add the mnist result

--- a/src/cifar10_densenet.ipynb
+++ b/src/cifar10_densenet.ipynb
@@ -160,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "batch_size = 256\n",
-    "def optmizer(epochs):\n",
+    "def optmizer(optimizer_step, epochs):\n",
     "    for i in (range(epochs)):\n",
     "        epoch_loss = []\n",
     "        start_epoch = time.time()        \n",
@@ -176,7 +176,7 @@
     "            dict_input = {inputs:feature[index], targets:label[index],\n",
     "                          train_flag: True, \n",
     "                          input_shortcut: np.zeros([batch_size, 2])}\n",
-    "            c, _ = session.run([cost, optimizer], feed_dict=dict_input)\n",
+    "            c, _ = session.run([cost, optimizer_step], feed_dict=dict_input)\n",
     "            epoch_loss.append(c)\n",
     "        print(\"Epoche: {}/{}\".format(i+1, epochs), \"| Training accuracy: \", session.run(accuracy, feed_dict=dict_input), \n",
     "              \"| Cost: {}\".format(np.mean(epoch_loss)), \" | Time for epoch: {:.2f}s\".format(time.time() - start_epoch))\n",
@@ -193,6 +193,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "saver.restore(session, '../model/cifar10_densenet150.ckpt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "optimizer_sgd_last_layer = tf.train.GradientDescentOptimizer(1e-5)\n",
+    "step_sgd_last_layer = optimizer_sgd_last_layer.minimize(cost)\n",
+    "reset_opt_op = tf.variables_initializer([optimizer_sgd_last_layer.get_slot(var, name) \n",
+    "                for name in optimizer_sgd_last_layer.get_slot_names() for var in last_layer_variables])\n",
+    "session.run(reset_opt_op)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "scrolled": true
@@ -202,27 +228,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Epoche: 1/401', '| Training accuracy: ', 0.71875, '| Cost: 0.67533826828', ' | Time for epoch: 25.25s')\n",
-      "('Epoche: 2/401', '| Training accuracy: ', 0.76953125, '| Cost: 0.616505146027', ' | Time for epoch: 23.01s')\n",
-      "('Epoche: 3/401', '| Training accuracy: ', 0.81640625, '| Cost: 0.583936095238', ' | Time for epoch: 23.04s')\n",
-      "('Epoche: 4/401', '| Training accuracy: ', 0.77734375, '| Cost: 0.576395750046', ' | Time for epoch: 23.11s')\n",
-      "('Epoche: 5/401', '| Training accuracy: ', 0.84375, '| Cost: 0.56354790926', ' | Time for epoch: 23.22s')\n",
-      "('Epoche: 6/401', '| Training accuracy: ', 0.82421875, '| Cost: 0.544458389282', ' | Time for epoch: 22.81s')\n",
-      "('Epoche: 7/401', '| Training accuracy: ', 0.8359375, '| Cost: 0.534693062305', ' | Time for epoch: 23.36s')\n",
-      "('Epoche: 8/401', '| Training accuracy: ', 0.82421875, '| Cost: 0.510336279869', ' | Time for epoch: 23.00s')\n",
-      "('Epoche: 9/401', '| Training accuracy: ', 0.83203125, '| Cost: 0.518966734409', ' | Time for epoch: 22.70s')\n",
-      "('Epoche: 10/401', '| Training accuracy: ', 0.84765625, '| Cost: 0.514798521996', ' | Time for epoch: 22.80s')\n",
-      "('Epoche: 11/401', '| Training accuracy: ', 0.87890625, '| Cost: 0.51392686367', ' | Time for epoch: 22.82s')\n",
-      "('Epoche: 12/401', '| Training accuracy: ', 0.83984375, '| Cost: 0.511986732483', ' | Time for epoch: 22.85s')\n",
-      "('Epoche: 13/401', '| Training accuracy: ', 0.86328125, '| Cost: 0.50252866745', ' | Time for epoch: 22.75s')\n",
-      "('Epoche: 14/401', '| Training accuracy: ', 0.8125, '| Cost: 0.50143045187', ' | Time for epoch: 22.84s')\n",
-      "('Epoche: 15/401', '| Training accuracy: ', 0.8359375, '| Cost: 0.499315410852', ' | Time for epoch: 23.01s')\n",
-      "('Epoche: 16/401', '| Training accuracy: ', 0.83203125, '| Cost: 0.492891937494', ' | Time for epoch: 22.93s')\n"
+      "('Epoche: 1/1000', '| Training accuracy: ', 0.98046875, '| Cost: 0.0609661415219', ' | Time for epoch: 22.61s')\n",
+      "('Epoche: 2/1000', '| Training accuracy: ', 0.984375, '| Cost: 0.0664535611868', ' | Time for epoch: 22.66s')\n",
+      "('Epoche: 3/1000', '| Training accuracy: ', 0.984375, '| Cost: 0.0643667504191', ' | Time for epoch: 22.58s')\n",
+      "('Epoche: 4/1000', '| Training accuracy: ', 0.9921875, '| Cost: 0.0613653957844', ' | Time for epoch: 22.25s')\n",
+      "('Epoche: 5/1000', '| Training accuracy: ', 0.97265625, '| Cost: 0.0719295293093', ' | Time for epoch: 22.24s')\n",
+      "('Epoche: 6/1000', '| Training accuracy: ', 0.99609375, '| Cost: 0.0669254437089', ' | Time for epoch: 22.28s')\n",
+      "('Epoche: 7/1000', '| Training accuracy: ', 0.98828125, '| Cost: 0.0623386390507', ' | Time for epoch: 22.28s')\n",
+      "('Epoche: 8/1000', '| Training accuracy: ', 0.98828125, '| Cost: 0.0662399157882', ' | Time for epoch: 22.31s')\n",
+      "('Epoche: 9/1000', '| Training accuracy: ', 0.96875, '| Cost: 0.0684274956584', ' | Time for epoch: 22.29s')\n",
+      "('Epoche: 10/1000', '| Training accuracy: ', 0.984375, '| Cost: 0.0651212409139', ' | Time for epoch: 22.43s')\n",
+      "('Epoche: 11/1000', '| Training accuracy: ', 0.984375, '| Cost: 0.065832413733', ' | Time for epoch: 22.44s')\n",
+      "('Epoche: 12/1000', '| Training accuracy: ', 0.984375, '| Cost: 0.0646044760942', ' | Time for epoch: 22.44s')\n",
+      "('Epoche: 13/1000', '| Training accuracy: ', 0.98828125, '| Cost: 0.0673528090119', ' | Time for epoch: 22.41s')\n",
+      "('Epoche: 14/1000', '| Training accuracy: ', 0.9765625, '| Cost: 0.0686994343996', ' | Time for epoch: 22.45s')\n",
+      "('Epoche: 15/1000', '| Training accuracy: ', 0.98828125, '| Cost: 0.0609454996884', ' | Time for epoch: 22.37s')\n",
+      "('Epoche: 16/1000', '| Training accuracy: ', 0.95703125, '| Cost: 0.068760804832', ' | Time for epoch: 22.43s')\n",
+      "('Epoche: 17/1000', '| Training accuracy: ', 0.984375, '| Cost: 0.0618383139372', ' | Time for epoch: 22.50s')\n",
+      "('Epoche: 18/1000', '| Training accuracy: ', 0.9765625, '| Cost: 0.0716672465205', ' | Time for epoch: 22.43s')\n",
+      "('Epoche: 19/1000', '| Training accuracy: ', 0.98828125, '| Cost: 0.067146807909', ' | Time for epoch: 22.43s')\n",
+      "('Epoche: 20/1000', '| Training accuracy: ', 0.99609375, '| Cost: 0.0672173351049', ' | Time for epoch: 22.41s')\n",
+      "('Epoche: 21/1000', '| Training accuracy: ', 0.9921875, '| Cost: 0.0643202289939', ' | Time for epoch: 22.46s')\n",
+      "('Epoche: 22/1000', '| Training accuracy: ', 0.984375, '| Cost: 0.0650600120425', ' | Time for epoch: 22.44s')\n",
+      "('Epoche: 23/1000', '| Training accuracy: ', 0.98046875, '| Cost: 0.0628502890468', ' | Time for epoch: 23.27s')\n",
+      "('Epoche: 24/1000', '| Training accuracy: ', 1.0, '| Cost: 0.069624170661', ' | Time for epoch: 22.89s')\n",
+      "('Epoche: 25/1000', '| Training accuracy: ', 0.984375, '| Cost: 0.0707003325224', ' | Time for epoch: 23.27s')\n",
+      "('Epoche: 26/1000', '| Training accuracy: ', 1.0, '| Cost: 0.0645659789443', ' | Time for epoch: 23.00s')\n",
+      "('Epoche: 27/1000', '| Training accuracy: ', 0.99609375, '| Cost: 0.0592053309083', ' | Time for epoch: 23.04s')\n",
+      "('Epoche: 28/1000', '| Training accuracy: ', 0.98828125, '| Cost: 0.0635347664356', ' | Time for epoch: 22.67s')\n",
+      "('Epoche: 29/1000', '| Training accuracy: ', 0.98828125, '| Cost: 0.0668646842241', ' | Time for epoch: 22.72s')\n",
+      "('Epoche: 30/1000', '| Training accuracy: ', 0.9921875, '| Cost: 0.065787166357', ' | Time for epoch: 22.75s')\n",
+      "('Epoche: 31/1000', '| Training accuracy: ', 0.984375, '| Cost: 0.0673841461539', ' | Time for epoch: 22.93s')\n",
+      "('Epoche: 32/1000', '| Training accuracy: ', 0.97265625, '| Cost: 0.0673477202654', ' | Time for epoch: 22.55s')\n",
+      "('Epoche: 33/1000', '| Training accuracy: ', 0.98828125, '| Cost: 0.0680919215083', ' | Time for epoch: 22.77s')\n",
+      "('Epoche: 34/1000', '| Training accuracy: ', 0.98828125, '| Cost: 0.0642832145095', ' | Time for epoch: 22.86s')\n"
      ]
     }
    ],
    "source": [
-    "optmizer(401)"
+    "optmizer(step_sgd_last_layer, 1000)"
    ]
   },
   {
