--- a/src/mnist_resnet.ipynb
+++ b/src/mnist_resnet.ipynb
@@ -183,7 +183,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# reintialize the last layer\n",
@@ -3447,7 +3449,7 @@
     }
    ],
    "source": [
-    "optmizer(step_m_last_layer, 3000)"
+    "optmizer(step_sgd_last_layer, 3000)"
    ]
   },
   {
