update the code

--- a/src/mnist_resnet.ipynb
+++ b/src/mnist_resnet.ipynb
@@ -176,8 +176,8 @@
     "            epoch_loss.append(c)\n",
     "        print(\"Epoche: {}/{}\".format(i+1, epochs), \"| Training accuracy: \", session.run(accuracy, feed_dict=dict_input), \n",
     "              \"| Cost: {}\".format(np.mean(epoch_loss)), \" | Time for epoch: {:.2f}s\".format(time.time() - start_epoch))\n",
-    "        if i%100==0:\n",
-    "            saver.save(session,'../model/mnist_resnet_{}.ckpt'.format(i))"
+    "#         if i%100==0:\n",
+    "#             saver.save(session,'../model/mnist_resnet_{}.ckpt'.format(i))"
    ]
   },
   {
