--- a/src/cifar10_densenet.ipynb
+++ b/src/cifar10_densenet.ipynb
@@ -114,29 +114,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# # Growth Rate (12, 16, 32, ...)\n",
-    "# k = 12\n",
-    "\n",
-    "# # Depth (40, 100, ...)\n",
-    "# L = 40\n",
-    "# nb_layers = int((L - 4) / 3)\n",
-    "\n",
-    "\n",
-    "# net = tflearn.conv_2d(inputs, 16, 3, regularizer='L2', weight_decay=0.0001)\n",
-    "# net = tflearn.densenet_block(net, nb_layers, k)\n",
-    "# net = tflearn.densenet_block(net, nb_layers, k)\n",
-    "# net = tflearn.densenet_block(net, nb_layers, k)\n",
-    "# net = tflearn.global_avg_pool(net)\n",
-    "\n",
-    "# net = tflearn.fully_connected(net, 200, activation='relu')\n",
-    "# feature_transform = tflearn.fully_connected(net, 2, activation='relu')\n",
-    "# output = dense_custom(tf.cond(train_flag, lambda: feature_transform,\n",
-    "#                               lambda: input_shortcut),\n",
-    "#                       2, 2, activation=None)\n",
-    "\n",
     "output, feature_transform = densenet(inputs, 2, 40, 12, 1.0,\n",
     "                                     train_flag,shortcut_flag, input_shortcut)"
    ]
@@ -144,7 +126,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#This part is for computing the accuracy of this model\n",
@@ -156,7 +140,9 @@
     "\n",
     "# loss function and optimizer\n",
     "cost = tf.reduce_mean((tf.nn.softmax_cross_entropy_with_logits(logits=output, labels=targets)))\n",
-    "step_adam = tf.train.AdamOptimizer(0.0001).minimize(cost)\n",
+    "step_adam = tf.train.AdamOptimizer(1e-4).minimize(cost)\n",
+    "step_momentum = tf.train.MomentumOptimizer(0.001, 0.9).minimize(cost)\n",
+    "step_gd = tf.train.GradientDescentOptimizer(0.0001).minimize(cost)\n",
     "saver = tf.train.Saver(tf.get_collection(tf.GraphKeys.TRAINABLE_VARIABLES))"
    ]
   },
@@ -231,7 +217,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "all_variables = tf.get_collection(tf.GraphKeys.TRAINABLE_VARIABLES)\n",
@@ -1389,7 +1377,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "batch_size_test = 256\n",
@@ -1460,7 +1450,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "feature_random, label_random = random_points(-1,\n",
@@ -1513,7 +1505,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\tplot_blobs_all_together(feature_random, pre_label_nn,feature_t, label_t,\n",
