add the test performance check

--- a/src/mnist_resnet.ipynb
+++ b/src/mnist_resnet.ipynb
@@ -15,7 +15,7 @@
     "import os\n",
     "import tflearn\n",
     "from utils import *\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]='1'\n"
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]='0'\n"
    ]
   },
   {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -182,15 +182,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# reintialize the last layer\n",
-    "saver.restore(session,'../model/mnist_resnet_900.ckpt')\n",
-    "session.run(tf.variables_initializer(last_layer_variables))"
+    "# saver.restore(session,'../model/mnist_resnet_2900.ckpt')\n",
+    "# session.run(tf.variables_initializer(last_layer_variables))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# load trained model\n",
+    "saver.restore(session,'../model/mnist_resnet_2900.ckpt')"
    ]
   },
   {
@@ -3450,6 +3462,37 @@
    ],
    "source": [
     "optmizer(step_sgd_last_layer, 3000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 0.998272538185\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check the test dataset performance\n",
+    "acc_list = []\n",
+    "for ii in range(mnist_data.test.num_examples//batch_size):\n",
+    "    batch = mnist_data.test.next_batch(batch_size)\n",
+    "    imgs = batch[0].reshape((-1, 28, 28, 1))\n",
+    "    labs = batch[1]\n",
+    "    imgs, labs = get_2_class(imgs, labs)\n",
+    "\n",
+    "    dict_input = {inputs:imgs, targets:labs, \n",
+    "                  train_flag: True, \n",
+    "                  input_shortcut: np.zeros([batch_size, 2])}\n",
+    "\n",
+    "    acc = session.run(accuracy, feed_dict=dict_input)\n",
+    "    acc_list.append(acc)\n",
+    "print(\"Test accuracy: {}\".format(np.mean(acc_list)))"
    ]
   },
   {
