rename cifar10 code

--- a/src/mnist_10_class_densenet.ipynb
+++ b/src/mnist_10_class_densenet.ipynb
@@ -698,7 +698,16 @@
       "('Epoch: 506/1001', '| Training accuracy: ', 1.0, '| Cost: 0.000384606129956', ' | Time for epoch: 84.91s')\n",
       "('Epoch: 507/1001', '| Training accuracy: ', 1.0, '| Cost: 0.000531024066731', ' | Time for epoch: 84.97s')\n",
       "('Epoch: 508/1001', '| Training accuracy: ', 1.0, '| Cost: 0.000383396167308', ' | Time for epoch: 84.33s')\n",
-      "('Epoch: 509/1001', '| Training accuracy: ', 1.0, '| Cost: 0.000240624402068', ' | Time for epoch: 84.20s')\n"
+      "('Epoch: 509/1001', '| Training accuracy: ', 1.0, '| Cost: 0.000240624402068', ' | Time for epoch: 84.20s')\n",
+      "('Epoch: 510/1001', '| Training accuracy: ', 1.0, '| Cost: 0.000381949474104', ' | Time for epoch: 84.56s')\n",
+      "('Epoch: 511/1001', '| Training accuracy: ', 1.0, '| Cost: 0.00038505467819', ' | Time for epoch: 84.07s')\n",
+      "('Epoch: 512/1001', '| Training accuracy: ', 1.0, '| Cost: 0.000388186541386', ' | Time for epoch: 84.99s')\n",
+      "('Epoch: 513/1001', '| Training accuracy: ', 1.0, '| Cost: 0.000384617800592', ' | Time for epoch: 83.93s')\n",
+      "('Epoch: 514/1001', '| Training accuracy: ', 1.0, '| Cost: 0.000385365245165', ' | Time for epoch: 84.34s')\n",
+      "('Epoch: 515/1001', '| Training accuracy: ', 1.0, '| Cost: 0.000385850318708', ' | Time for epoch: 84.59s')\n",
+      "('Epoch: 516/1001', '| Training accuracy: ', 1.0, '| Cost: 0.000381054676836', ' | Time for epoch: 84.60s')\n",
+      "('Epoch: 517/1001', '| Training accuracy: ', 1.0, '| Cost: 0.000379629724193', ' | Time for epoch: 84.10s')\n",
+      "('Epoch: 518/1001', '| Training accuracy: ', 1.0, '| Cost: 0.000382873637136', ' | Time for epoch: 84.38s')\n"
      ]
     }
    ],
